--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,13 @@
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100dvh;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 @media (prefers-color-scheme: light) {
@@ -28,4 +34,68 @@ body {
     color: #213547;
     background-color: #fff;
   }
+}
+
+.h-100 {
+  height: 100%;
+}
+
+.flex {
+  display: flex;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.py-8 {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.px-16 {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.gap-8 {
+  gap: 8px;
+}
+
+.text-primary {
+  color: #61dbfb;
+}
+
+.text-grey-100 {
+  color: #f2f2f2;
+}
+
+.bg-grey-800 {
+  background-color: #2d2d2d;
+}
+
+.bg-grey-600 {
+  background-color: #313041;
+}
+
+li {
+  line-height: 2;
+}
+
+li::marker {
+  color: #61dbfb;
+  font-size: 1.2rem;
+  line-height: 1;
+}
+
+.background-image {
+  background-image: url("./assets/react.svg");
+  background-repeat: no-repeat;
+  background-position: right -200px top 30%;
+  background-size: 25rem;
+  background-blend-mode: overlay;
 }
